syntax = "proto3";

package bzl_remote.metadata_service;

option java_package = "io.bazeltools.bzl_remote";
option java_outer_classname = "MetadataService";

import "build/bazel/remote/execution/v2/remote_execution.proto";


service MetadataService {
    rpc LookupLen(LookupLenRequest) returns (LookupLenResponse);
}


message LookupLenRequest {
    string hash = 1;
}

message LookupLenResponse {
    build.bazel.remote.execution.v2.Digest digest = 1;
}
